; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_swapchain_create.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_swapchain_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* (i32, %struct.gs_init_data*)* }
%struct.gs_init_data = type { i32 }

@thread_graphics = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [20 x i8] c"gs_swapchain_create\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @gs_swapchain_create(%struct.gs_init_data* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.gs_init_data*, align 8
  %4 = alloca %struct.gs_init_data, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  store %struct.gs_init_data* %0, %struct.gs_init_data** %3, align 8
  %6 = load %struct.gs_init_data*, %struct.gs_init_data** %3, align 8
  %7 = bitcast %struct.gs_init_data* %4 to i8*
  %8 = bitcast %struct.gs_init_data* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 %8, i64 4, i1 false)
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** @thread_graphics, align 8
  store %struct.TYPE_5__* %9, %struct.TYPE_5__** %5, align 8
  %10 = load %struct.gs_init_data*, %struct.gs_init_data** %3, align 8
  %11 = call i32 @gs_valid_p(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), %struct.gs_init_data* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %23

14:                                               ; preds = %1
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32* (i32, %struct.gs_init_data*)*, i32* (i32, %struct.gs_init_data*)** %17, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32* %18(i32 %21, %struct.gs_init_data* %4)
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %14, %13
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @gs_valid_p(i8*, %struct.gs_init_data*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
